--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset='utf-8'>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <title>Анализатор страниц</title>
-    </head>
-    <body>
-        <header>
-            <a href="/">Анализатор страниц</a>
-            <a href='urls'>Сайты</a>
-        </header>
-        <dev>
-            <h1>Анализатор страниц</h1>
-            <p>Бесплатно проверяйте сайты на SEO пригодность</p>
-            <form action='/urls' method='POST'>
-                <input type='text' name='url' placeholder='https:/www.example.com'>
-                <input type='submit' value='Проверить'
-            </form>
-        </dev>
-        <dev>
-            <a href=https://ru.hexlet.io/my>Hexlet</a>
-        </dev>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<main class="flex-grow-1">
+  <div class="container-lg mt-3">
+    <h1></h1>
+    <div class="row">
+      <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+        <h1 class="display-3">Анализатор страниц</h1>
+        <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+        <form action="/urls " method="post" class="d-flex justify-content-center">
+        <input type="text" name="url" placeholder="https://www.example.com" value="" class="form-control form-control-lg">
+        <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+        </form>
+      </div>
+    </div>
+  </div>
+</main>
+{% endblock %}
