--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -23,6 +23,7 @@
                 {{ url.name }}
               </a>
             </td>
+            <td>{{ url.check_created_at or ''}}</td>
             <td></td>
             <td></td>
           {% endfor %}
