--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -24,7 +24,7 @@
         </div>
 
         <h2 class="mt-5 mb-3">Проверки</h2>
-        <form method="post" action="/urls/{{ url.id }}">
+        <form method="post" action="{{ url_for('check_url', id=url.id) }}">
             <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
         <div>
@@ -43,8 +43,8 @@
                   {% for check in checks %}
                   <tr>
                     <td>{{ check.id }}</td>
+                    <td>{{ check.status_code }}</td>
                     <td></td>
-                      <td></td>
                     <td></td>
                     <td></td>
                     <td>{{ check.created_at }}</td>
