--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -19,13 +19,14 @@
           <tr>
             <td>{{ url.id }}</td>
             <td>
-              <a href="{{ url_for('show_info_url', id=url.id) }}">
-                {{ url.name }}
-              </a>
+              <a href="{{ url_for('show_info_url', id=url.id) }}">{{ url.name }}</a>
             </td>
-            <td>{{ url.check_created_at or ''}}</td>
-            <td></td>
-            <td></td>
+               <td>{% if url.created_at %}
+                      {{ url.created_at }}
+                   {% endif %}</td>
+               <td>{% if url.status_code %}
+                      {{ url.status_code }}
+                   {% endif %}</td>
           {% endfor %}
           </tr>
         </tbody>
