--- a/page_analyzer/templates/base.html
+++ b/page_analyzer/templates/base.html
@@ -34,7 +34,7 @@
      <footer class="border-top py-3 mt-5 flex-shrink-0">
       <div class="container-lg">
         <div class="text-center">
-          <a href="https://ru.hexlet.io/" target="_blank">Hexlet</a>
+          <a href="https://github.com/Tarilia" target="_blank">GitHub</a>
         </div>
       </div>
     </footer>
